overflow hidden and background fixed

--- a/cssu.css
+++ b/cssu.css
@@ -7,6 +7,11 @@ html {
     background-image: url(./Coraline\ 32.jpg);
     background-size: cover;
     background-position: 50% 45%;
+    background-attachment: fixed;
+}
+
+body {
+    overflow: hidden;
 }
 
 .alert {
